--- a/YelpCamp/package.json
+++ b/YelpCamp/package.json
@@ -12,6 +12,8 @@
     "express": "^4.14.0",
     "body-parser": "^1.15.2",
     "ejs": "^2.4.2",
-    "mongoose": "^4.5.1"
+    "mongoose": "^4.5.1",
+    "method-override": "^2.3.6",
+    "express-sanitizer": "^1.0.1",
   }
 }
