--- a/YelpCamp/package.json
+++ b/YelpCamp/package.json
@@ -15,5 +15,9 @@
     "mongoose": "^4.5.1",
     "method-override": "^2.3.6",
     "express-sanitizer": "^1.0.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
+    "express-session": "^1.14.0",
   }
 }
