--- a/YelpCamp/package.json
+++ b/YelpCamp/package.json
@@ -19,5 +19,6 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "express-session": "^1.14.0",
+    "connect-flash": "^0.1.1",
   }
 }
